added playermanagement added player storing in internal file system
todo: code clean up, player visibility (and way of storing player)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="starterPlayerCount">1</string>
     <string name="starterGameMode">301</string>
     <string name="submitScore">Bestätigen</string>
+    <string name="playerManagement">Spieler Management</string>
+    <string name="createPlayer">Neuer Spieler</string>
     <string name="startGame">Spielen</string>
     <string name="title_activity_finish_screen">FinishScreen</string>
 </resources>
